@@ -10,9 +10,10 @@
 #' @param title the plot's main title.
 #' @param smoother what type of smoothing line to use to summarize the plotted coefficient.
 #' @param spalette colour palette. Not relevant for \code{qi = "Marginal Effect"}. Default palette is \code{"Set1"}. See \code{\link{scale_colour_brewer}}.
-#' @param leg.name name of the stratified hazard rates legend. Only relevant if \code{qi = "Hazard Rate"}.
+#' @param legend specifies what type of legend to include (if applicable). The default is \code{legend = "legend"}. To hide the legend use \code{legend = FALSE}. See the \code{\link{discrete_scale}} for more details.
+#' @param leg.name name of the legend (if applicable).
 #' @param lcolour character string colour of the smoothing line. The default is hexadecimal colour \code{lcolour = '#2B8CBE'}. Only relevant if \code{qi = "Marginal Effect"}.
-#' @param lsize size of the smoothing line. Default is 2. See \code{\link{ggplot2}}.
+#' @param lsize size of the smoothing line. Default is 1. See \code{\link{ggplot2}}.
 #' @param pcolour character string colour of the simulated points. Default is hexadecimal colour \code{pcolour = '#A6CEE3'}. Only relevant if \code{qi = "Marginal Effect"}.
 #' @param psize size of the plotted simulation points. Default is \code{psize = 1}. See \code{\link{ggplot2}}.
 #' @param alpha point alpha (e.g. transparency) for the points or ribbons. Default is \code{alpha = 0.1}. See \code{\link{ggplot2}}.
@@ -77,7 +78,7 @@
 #'
 #' Carpenter, Daniel P. 2002. ''Groups, the Media, Agency Waiting Costs, and FDA Drug Approval.'' American Journal of Political Science 46(3): 490-505.
 
-simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = NULL, title = NULL, smoother = "auto", spalette = "Set1", leg.name = "", lcolour = "#2B8CBE", lsize = 2, pcolour = "#A6CEE3", psize = 1, alpha = 0.1, ribbons = FALSE, ...)
+simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = NULL, title = NULL, smoother = "auto", spalette = "Set1", legend = "legend", leg.name = "", lcolour = "#2B8CBE", lsize = 1, pcolour = "#A6CEE3", psize = 1, alpha = 0.1, ribbons = FALSE, ...)
 {
 	HRate <- Lower50 <- Upper50 <- Min <- Max <- Median <- NULL
 	Time <- QI <- HRValue <- X1 <- X2 <- NULL
@@ -113,18 +114,18 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 		        geom_smooth(method = smoother, size = lsize, se = FALSE) +
 		        facet_grid(.~ Strata) +
 		        xlab(xlab) + ylab(ylab) +
-		        scale_colour_brewer(palette = spalette, name = leg.name) +
+		        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
 		        ggtitle(title) +
-		        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+		        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 		        theme_bw(base_size = 15)
 	    	} else if (is.null(obj$strata)){
 		      	ggplot(obj, aes(Time, QI, colour = factor(HRValue))) +
 		        	geom_point(shape = 21, alpha = I(alpha), size = psize) +
 			        geom_smooth(method = smoother, size = lsize, se = FALSE) +
-			        scale_colour_brewer(palette = spalette, name = leg.name) +
+			        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
 			        xlab(xlab) + ylab(ylab) +
 			        ggtitle(title) +
-			        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+			        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 			        theme_bw(base_size = 15)
 			}
 		} 
@@ -147,10 +148,10 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 			        geom_point(shape = 21, alpha = I(alpha), size = psize) +
 			        geom_smooth(method = smoother, size = lsize, se = FALSE) +
 			        geom_hline(aes(yintercept = 0), linetype = "dotted") +
-			        scale_colour_brewer(palette = spalette, name = leg.name) +
+			        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
 			        xlab(xlab) + ylab(ylab) +
 			        ggtitle(title) +
-			        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+			        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 			        theme_bw(base_size = 15)
 		    }
 		} 
@@ -163,10 +164,10 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 			        geom_point(shape = 21, alpha = I(alpha), size = psize) +
 			        geom_smooth(method = smoother, size = lsize, se = FALSE) +
 			        geom_hline(aes(yintercept = 1), linetype = "dotted") +
-			        scale_colour_brewer(palette = spalette, name = leg.name) +
+			        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
 			        xlab(xlab) + ylab(ylab) +
 			        ggtitle(title) +
-			        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+			        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 			        theme_bw(base_size = 15)
 		    }
 	    }
@@ -183,10 +184,10 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 				geom_ribbon(aes(ymin = Min, ymax = Max), alpha = alpha, linetype = 0) +
 				facet_grid(. ~ Strata) +
 				xlab(xlab) + ylab(ylab) +
-		        scale_colour_brewer(palette = spalette, name = leg.name) +
-		        scale_fill_brewer(palette = spalette, name = leg.name) +
+		        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
+		        scale_fill_brewer(palette = spalette, name = leg.name, guide = legend) +
 				ggtitle(title) +
-		        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+		        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 			theme_bw(base_size = 15)
     	} else if (is.null(obj$Strata)){
 			obj <- MinMaxLines(df = obj, hr = TRUE)
@@ -194,11 +195,11 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 		        geom_line(size = lsize) +
 				geom_ribbon(aes(ymin = Lower50, ymax = Upper50), ailpha = alpha, linetype = 0) +
 				geom_ribbon(aes(ymin = Min, ymax = Max), alpha = alpha, linetype = 0) +
-		        scale_colour_brewer(palette = spalette, name = leg.name) +
-		        scale_fill_brewer(palette = spalette, name = leg.name) +
+		        scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
+		        scale_fill_brewer(palette = spalette, name = leg.name, guide = legend) +
 		        xlab(xlab) + ylab(ylab) +
 		        ggtitle(title) +
-		        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+		        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 		        theme_bw(base_size = 15)
 			}
 		} 
@@ -211,7 +212,6 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 	        	geom_hline(aes(yintercept = 1), linetype = "dotted") +
 		        xlab(xlab) + ylab(ylab) +
 		        ggtitle(title) +
-		        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 		        theme_bw(base_size = 15)
 		} 
 		else if (qi == "Hazard Ratio" | qi == "First Difference"){
@@ -225,11 +225,11 @@ simGG.siminteract <- function(obj, from = NULL, to = NULL, xlab = NULL, ylab = N
 					geom_ribbon(aes(ymin = Lower50, ymax = Upper50), alpha = alpha, linetype = 0) +
 					geom_ribbon(aes(ymin = Min, ymax = Max), alpha = alpha, linetype = 0) +
 					geom_hline(aes(yintercept = 1), linetype = "dotted") +
-					scale_colour_brewer(palette = spalette, name = leg.name) +
-			        scale_fill_brewer(palette = spalette, name = leg.name) +
+					scale_colour_brewer(palette = spalette, name = leg.name, guide = legend) +
+			        scale_fill_brewer(palette = spalette, name = leg.name, guide = legend) +
 			        xlab(xlab) + ylab(ylab) +
 			        ggtitle(title) +
-			        guides(colour = guide_legend(override.aes = list(alpha = 1))) +
+			        #guides(colour = guide_legend(override.aes = list(alpha = 1))) +
 					theme_bw(base_size = 15)
 		    }
 	    }
